--- a/P5_test.ipynb
+++ b/P5_test.ipynb
@@ -14,7 +14,13 @@
     "import cv2\n",
     "import glob\n",
     "import random\n",
-    "from random import shuffle"
+    "from random import shuffle\n",
+    "\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from skimage.feature import hog\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from scipy.ndimage.measurements import label"
    ]
   },
   {
@@ -41,6 +47,7 @@
    },
    "outputs": [],
    "source": [
+    "#read the images\n",
     "cars=glob.glob('vehicles/vehicles/*/*.png')\n",
     "notcars=glob.glob('non-vehicles/non-vehicles/*/*.png')\n",
     "shuffle(cars)\n",
@@ -72,10 +79,6 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.svm import LinearSVC\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from skimage.feature import hog\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "\n",
     "# Define a function to return HOG features and visualization\n",
@@ -92,26 +95,33 @@
     "                       cells_per_block=(cell_per_block, cell_per_block), transform_sqrt=True, \n",
     "                       visualise=vis, feature_vector=feature_vec)\n",
     "        return features\n",
+    "#working with HOG features\n",
+    "colorspace = 'RGB' # Can be RGB, HSV, LUV, HLS, YUV, YCrCb\n",
+    "orient = 9\n",
+    "pix_per_cell = 8\n",
+    "cell_per_block = 2\n",
+    "hog_channel = 0 # Can be 0, 1, 2, or \"ALL\"\n",
     "\n",
-    "def bin_spatial(img, color_space='RGB', size=(32, 32)):\n",
-    "    # Convert image to new color space (if specified)\n",
-    "    # Use cv2.resize().ravel() to create the feature vector\n",
-    "    if color_space != 'RGB':\n",
-    "        if color_space == 'HSV':\n",
-    "            feature_image = cv2.cvtColor(img, cv2.COLOR_RGB2HSV)\n",
-    "        elif color_space == 'LUV':\n",
-    "            feature_image = cv2.cvtColor(img, cv2.COLOR_RGB2LUV)\n",
-    "        elif color_space == 'HLS':\n",
-    "            feature_image = cv2.cvtColor(img, cv2.COLOR_RGB2HLS)\n",
-    "        elif color_space == 'YUV':\n",
-    "            feature_image = cv2.cvtColor(img, cv2.COLOR_RGB2YUV)\n",
-    "        elif color_space == 'YCrCb':\n",
-    "            feature_image = cv2.cvtColor(img, cv2.COLOR_RGB2YCrCb)\n",
-    "    else: feature_image = np.copy(img)             \n",
-    "    # Use cv2.resize().ravel() to create the feature vector\n",
-    "    features = cv2.resize(feature_image, size).ravel() \n",
-    "    # Return the feature vector\n",
-    "    return features\n",
+    "\n",
+    "\n",
+    "img=mpimg.imread(cars[random.randint(0, len(cars)-1)])\n",
+    "gray=cv2.cvtColor(img,cv2.COLOR_RGB2GRAY)\n",
+    "features, hog_image = get_hog_features(gray, orient, pix_per_cell, cell_per_block,vis=True, feature_vec=False)\n",
+    "print('The function get_hog_features() resulted in features array with the size: ' +str(features.shape))\n",
+    "plotmyimage(img,'sample image')\n",
+    "plotmyimage(hog_image,'hog feature extracted image')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "\n",
     "# Define a function to compute color histogram features  \n",
     "def color_hist(image, nbins=32, bins_range=(0, 256),vis=False):\n",
@@ -134,46 +144,7 @@
     "        return rhist, ghist, bhist, bin_centers\n",
     "    else:\n",
     "        return hist_features\n",
-    "    \n",
-    "    \n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#working with HOG features\n",
-    "colorspace = 'RGB' # Can be RGB, HSV, LUV, HLS, YUV, YCrCb\n",
-    "orient = 9\n",
-    "pix_per_cell = 8\n",
-    "cell_per_block = 2\n",
-    "hog_channel = 0 # Can be 0, 1, 2, or \"ALL\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "img=mpimg.imread(cars[random.randint(0, len(cars)-1)])\n",
-    "gray=cv2.cvtColor(img,cv2.COLOR_RGB2GRAY)\n",
-    "features, hog_image = get_hog_features(gray, orient, pix_per_cell, cell_per_block,vis=True, feature_vec=False)\n",
-    "print('The function get_hog_features() resulted in features array with the size: ' +str(features.shape))\n",
-    "plotmyimage(img,'sample image')\n",
-    "plotmyimage(hog_image,'hog feature extracted image')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "#reading a random image\n",
     "img=mpimg.imread(cars[random.randint(0, len(cars)-1)])\n",
     "#plotting the sample image\n",
@@ -202,10 +173,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
+    "\n",
+    "def bin_spatial(img, color_space='RGB', size=(32, 32)):\n",
+    "    # Convert image to new color space (if specified)\n",
+    "    # Use cv2.resize().ravel() to create the feature vector\n",
+    "    if color_space != 'RGB':\n",
+    "        if color_space == 'HSV':\n",
+    "            feature_image = cv2.cvtColor(img, cv2.COLOR_RGB2HSV)\n",
+    "        elif color_space == 'LUV':\n",
+    "            feature_image = cv2.cvtColor(img, cv2.COLOR_RGB2LUV)\n",
+    "        elif color_space == 'HLS':\n",
+    "            feature_image = cv2.cvtColor(img, cv2.COLOR_RGB2HLS)\n",
+    "        elif color_space == 'YUV':\n",
+    "            feature_image = cv2.cvtColor(img, cv2.COLOR_RGB2YUV)\n",
+    "        elif color_space == 'YCrCb':\n",
+    "            feature_image = cv2.cvtColor(img, cv2.COLOR_RGB2YCrCb)\n",
+    "    else: feature_image = np.copy(img)             \n",
+    "    # Use cv2.resize().ravel() to create the feature vector\n",
+    "    features = cv2.resize(feature_image, size).ravel() \n",
+    "    # Return the feature vector\n",
+    "    return features\n",
+    "\n",
+    "\n",
     "img=mpimg.imread(cars[random.randint(0, len(cars)-1)])\n",
     "#plotting the sample image\n",
     "plotmyimage(img,'original image')\n",
@@ -266,7 +260,7 @@
     "    for file in imgs:\n",
     "        # Read in each one by one\n",
     "        image = mpimg.imread(file)\n",
-    "        image=image*256\n",
+    "        #image=image*256\n",
     "        features1=[]\n",
     "        # apply color conversion if other than 'RGB'\n",
     "        if cspace != 'RGB':\n",
@@ -300,8 +294,9 @@
     "                        pix_per_cell, cell_per_block, vis=False, feature_vec=True)\n",
     "        # Append the new feature vector to the features list\n",
     "        features1.append(hog_features)\n",
-    "        features.append(np.concatenate((spat_features,hist_features,hog_features)))\n",
+    "        features.append(np.concatenate(features1))\n",
     "    # Return list of feature vectors\n",
+    "    # for the timebeing, only hog features are being returned. \n",
     "    return features"
    ]
   },
@@ -313,21 +308,12 @@
    },
    "outputs": [],
    "source": [
-    "cars_features=extract_features(cars)\n",
-    "notcars_features=extract_features(notcars)\n",
+    "cars_features=extract_features(cars,cspace='YUV', orient=9, pix_per_cell=8, cell_per_block=2, \n",
+    "                               hog_channel='ALL')\n",
+    "notcars_features=extract_features(notcars,cspace='YUV',orient=9, pix_per_cell=8, cell_per_block=2,\n",
+    "                                  hog_channel='ALL')\n",
     "print('Total number of features of cars are     : ' +str(np.array(cars_features).shape))\n",
     "print('Total number of features of non-cars are : ' +str(np.array(notcars_features).shape))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "len(cars_features)"
    ]
   },
   {
@@ -506,6 +492,7 @@
     "\n",
     "    #9) Return concatenated array of features\n",
     "    return np.concatenate(img_features)\n",
+    "    #return (img_features)\n",
     "\n",
     "\n",
     "# and the list of windows to be searched (output of slide_windows())\n",
@@ -513,8 +500,8 @@
     "                    spatial_size=(32, 32), hist_bins=32, \n",
     "                    hist_range=(0, 256), orient=9, \n",
     "                    pix_per_cell=8, cell_per_block=2, \n",
-    "                    hog_channel=0, spatial_feat=True, \n",
-    "                    hist_feat=True, hog_feat=True):\n",
+    "                    hog_channel=0, spatial_feat=False, \n",
+    "                    hist_feat=False, hog_feat=True):\n",
     "\n",
     "    #1) Create an empty list to receive positive detection windows\n",
     "    on_windows = []\n",
@@ -529,6 +516,7 @@
     "                            cell_per_block=cell_per_block, \n",
     "                            hog_channel=hog_channel, spatial_feat=spatial_feat, \n",
     "                            hist_feat=hist_feat, hog_feat=hog_feat)\n",
+    "        #print(np.array(features).shape)\n",
     "        #5) Scale extracted features to be fed to classifier\n",
     "        test_features = scaler.transform(np.array(features).reshape(1, -1))\n",
     "        #6) Predict using your classifier\n",
@@ -549,24 +537,46 @@
    },
    "outputs": [],
    "source": [
+    "print('good so far...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "images=glob.glob('test_images/*.jpg')\n",
-    "\n",
+    "print(images[0])\n",
+    "#file=images[0]\n",
     "for file in images:\n",
-    "    image=mpimg.imread(file)\n",
-    "    windows = slide_window(image, x_start_stop=[None, None], y_start_stop=[400,720], \n",
-    "                    xy_window=(96, 96), xy_overlap=(0.8, 0.8))\n",
+    "    image1=(mpimg.imread(file))\n",
+    "    image=np.copy(image1)\n",
+    "    #image = image.astype(np.float32)/255\n",
+    "    windows = slide_window(image, x_start_stop=[None, None], y_start_stop=[400,700], \n",
+    "                    xy_window=(96, 96), xy_overlap=(0.85, 0.85))\n",
     "\n",
-    "    hot_windows = search_windows(image, windows, svc, X_scaler, color_space='YUV', \n",
-    "                        spatial_size=(32,32), hist_bins=16, \n",
+    "\n",
+    "    window_img = draw_boxes(image, windows, color=(0, 0, 255), thick=6)                    \n",
+    "    plotmyimage(window_img,'search grid on a sample image')\n",
+    "\n",
+    "    colorspace = 'YUV' # Can be RGB, HSV, LUV, HLS, YUV, YCrCb\n",
+    "    orient = 9\n",
+    "    pix_per_cell = 8\n",
+    "    cell_per_block = 2\n",
+    "    hog_channel = 'ALL' # Can be 0, 1, 2, or \"ALL\"\n",
+    "\n",
+    "    hot_windows = search_windows(image1, windows, svc, X_scaler, color_space='YUV', \n",
+    "                        spatial_size=(32,32), hist_bins=32, \n",
     "                        orient=orient, pix_per_cell=pix_per_cell, \n",
-    "                        cell_per_block=cell_per_block, \n",
-    "                        hog_channel='ALL', spatial_feat=True, \n",
-    "                        hist_feat=True, hog_feat=True)                       \n",
+    "                        cell_per_block=cell_per_block,hog_channel='ALL',spatial_feat=False, hist_feat=False,hog_feat=True)                       \n",
     "\n",
-    "    window_img = draw_boxes(draw_image, hot_windows, color=(0, 0, 255), thick=6)                    \n",
-    "    plotmyimage(windiw_img)\n",
+    "    window_img = draw_boxes(image, hot_windows, color=(0, 0, 255), thick=6)                    \n",
+    "    plotmyimage(window_img)\n",
     "\n",
-    "plt.imshow(window_img)\n"
+    "    plt.imshow(window_img)\n"
    ]
   },
   {
@@ -582,10 +592,11 @@
     "def find_cars(img, ystart, ystop, scale, svc, X_scaler, orient, pix_per_cell, cell_per_block, spatial_size, hist_bins):\n",
     "    \n",
     "    draw_img = np.copy(img)\n",
-    "    img = img.astype(np.float32)/255\n",
-    "    \n",
+    "    #img = img.astype(np.float32)/255\n",
+    "    boxes=[]\n",
     "    img_tosearch = img[ystart:ystop,:,:]\n",
-    "    ctrans_tosearch = convert_color(img_tosearch, conv='RGB2YCrCb')\n",
+    "    #ctrans_tosearch = convert_color(img_tosearch, conv='RGB2YCrCb')\n",
+    "    ctrans_tosearch = np.copy(img_tosearch)\n",
     "    if scale != 1:\n",
     "        imshape = ctrans_tosearch.shape\n",
     "        ctrans_tosearch = cv2.resize(ctrans_tosearch, (np.int(imshape[1]/scale), np.int(imshape[0]/scale)))\n",
@@ -632,7 +643,7 @@
     "            hist_features = color_hist(subimg, nbins=hist_bins)\n",
     "\n",
     "            # Scale features and make a prediction\n",
-    "            test_features = X_scaler.transform(np.hstack((spatial_features, hist_features, hog_features)).reshape(1, -1))    \n",
+    "            test_features = X_scaler.transform(np.hstack( hog_features).reshape(1, -1))    \n",
     "            #test_features = X_scaler.transform(np.hstack((shape_feat, hist_feat)).reshape(1, -1))    \n",
     "            test_prediction = svc.predict(test_features)\n",
     "            \n",
@@ -641,8 +652,8 @@
     "                ytop_draw = np.int(ytop*scale)\n",
     "                win_draw = np.int(window*scale)\n",
     "                cv2.rectangle(draw_img,(xbox_left, ytop_draw+ystart),(xbox_left+win_draw,ytop_draw+win_draw+ystart),(0,0,255),6) \n",
-    "                \n",
-    "    return draw_img"
+    "                boxes.append(((int(xbox_left), int(ytop_draw+ystart)),(int(xbox_left+win_draw),int(ytop_draw+win_draw+ystart))))\n",
+    "    return draw_img, boxes"
    ]
   },
   {
@@ -658,6 +669,7 @@
     "    for box in bbox_list:\n",
     "        # Add += 1 for all pixels inside each bbox\n",
     "        # Assuming each \"box\" takes the form ((x1, y1), (x2, y2))\n",
+    "        #print(box.shape)\n",
     "        heatmap[box[0][1]:box[1][1], box[0][0]:box[1][0]] += 1\n",
     "\n",
     "    # Return updated heatmap\n",
@@ -682,8 +694,98 @@
     "        # Draw the box on the image\n",
     "        cv2.rectangle(img, bbox[0], bbox[1], (0,0,255), 6)\n",
     "    # Return the image\n",
-    "    return img\n"
+    "    return img\n",
+    "def convert_color(img, conv='RGB2YCrCb'):\n",
+    "    if conv == 'RGB2YCrCb':\n",
+    "        return cv2.cvtColor(img, cv2.COLOR_RGB2YCrCb)\n",
+    "    if conv == 'BGR2YCrCb':\n",
+    "        return cv2.cvtColor(img, cv2.COLOR_BGR2YCrCb)\n",
+    "    if conv == 'RGB2LUV':\n",
+    "        return cv2.cvtColor(img, cv2.COLOR_RGB2LUV)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "#for file in images:\n",
+    "\n",
+    "\n",
+    "\n",
+    "file=images[0]\n",
+    "image1=(mpimg.imread(file))\n",
+    "image=np.copy(image1)\n",
+    "\n",
+    "image = image.astype(np.float32)/255\n",
+    "\n",
+    "ystart = 400\n",
+    "ystop = 656\n",
+    "scale = 1.0\n",
+    "\n",
+    "bbox_list = []\n",
+    "orient=10\n",
+    "pix_per_cell=8\n",
+    "cell_per_block=2\n",
+    "spatial_size=(32, 32)\n",
+    "hist_bins=64\n",
+    "\n",
+    "\n",
+    "\n",
+    "_,boxes=find_cars(image, ystart, ystop, scale, svc, X_scaler,\n",
+    "                                orient=9, pix_per_cell=8, cell_per_block=2,\n",
+    "                                spatial_size=(32,32), hist_bins=32)\n",
+    "bbox_list.append(boxes)\n",
+    "\n",
+    "\n",
+    "bbox_list = [item for sublist in bbox_list for item in sublist] \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "heat = np.zeros_like(image[:,:,0]).astype(np.float)\n",
+    "#print(heat)\n",
+    "heat = add_heat(heat, bbox_list)\n",
+    "heat = apply_threshold(heat, 1)  \n",
+    "\n",
+    "heatmap = np.clip(heat, 0, 255)\n",
+    "# Find final boxes from heatmap using label function\n",
+    "labels = label(heatmap)\n",
+    "draw_img = draw_labeled_bboxes(np.copy(image), labels)\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "plt.subplot(121)\n",
+    "plt.imshow(draw_img)\n",
+    "plt.title('Car Positions')\n",
+    "plt.subplot(122)\n",
+    "plt.imshow(heatmap, cmap='hot')\n",
+    "plt.title('Heat Map')\n",
+    "fig.tight_layout()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plotmyimage(heatmap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
