--- a/P5_test.ipynb
+++ b/P5_test.ipynb
@@ -95,20 +95,26 @@
     "                       cells_per_block=(cell_per_block, cell_per_block), transform_sqrt=True, \n",
     "                       visualise=vis, feature_vector=feature_vec)\n",
     "        return features\n",
+    "    \n",
     "#working with HOG features\n",
-    "colorspace = 'RGB' # Can be RGB, HSV, LUV, HLS, YUV, YCrCb\n",
     "orient = 9\n",
     "pix_per_cell = 8\n",
     "cell_per_block = 2\n",
+    "colorspace = 'YUV' # Can be RGB, HSV, LUV, HLS, YUV, YCrCb\n",
     "hog_channel = 0 # Can be 0, 1, 2, or \"ALL\"\n",
     "\n",
     "\n",
     "\n",
     "img=mpimg.imread(cars[random.randint(0, len(cars)-1)])\n",
+    "\n",
     "gray=cv2.cvtColor(img,cv2.COLOR_RGB2GRAY)\n",
+    "\n",
     "features, hog_image = get_hog_features(gray, orient, pix_per_cell, cell_per_block,vis=True, feature_vec=False)\n",
+    "\n",
     "print('The function get_hog_features() resulted in features array with the size: ' +str(features.shape))\n",
+    "\n",
     "plotmyimage(img,'sample image')\n",
+    "\n",
     "plotmyimage(hog_image,'hog feature extracted image')\n",
     "\n",
     "\n"
@@ -149,7 +155,7 @@
     "img=mpimg.imread(cars[random.randint(0, len(cars)-1)])\n",
     "#plotting the sample image\n",
     "plotmyimage(img,'original image')\n",
-    "#scaling up the pixel values so that the values are correctly represented\n",
+    "#scaling up the pixel values for png images so that the values are correctly represented\n",
     "img=img*256\n",
     "#calling function for color histofram\n",
     "rh, gh, bh, bincen = color_hist(img, vis=True)\n",
@@ -249,10 +255,10 @@
     "# Define a function to extract features from a list of images\n",
     "# Have this function call bin_spatial() and color_hist()\n",
     "def extract_features(imgs, \n",
-    "                     cspace='RGB', \n",
-    "                     orient=9, pix_per_cell=8, cell_per_block=2, \n",
-    "                     hog_channel=0,spatial_size=(32,32),\n",
-    "                     hist_bins=32,bins_range=(0, 256)\n",
+    "                     cspace='YUV', \n",
+    "                     orient=9, pix_per_cell=8, cell_per_block=2, hog_channel=0,\n",
+    "                     hist_bins=32,bins_range=(0, 256),\n",
+    "                     spatial_size=(32,32),spatial_feat=False, hist_feat=False,hog_feat=True\n",
     "                    ):\n",
     "    # Create a list to append feature vectors to\n",
     "    features = []\n",
@@ -276,24 +282,26 @@
     "                feature_image = cv2.cvtColor(image, cv2.COLOR_RGB2YCrCb)\n",
     "        else: feature_image = np.copy(image)      \n",
     "        \n",
-    "        spat_features = bin_spatial(feature_image, size=spatial_size)\n",
-    "        \n",
-    "        hist_features = color_hist(feature_image, nbins=hist_bins, bins_range=bins_range)\n",
-    "        \n",
-    "        \n",
-    "        # Call get_hog_features() with vis=False, feature_vec=True\n",
-    "        if hog_channel == 'ALL':\n",
-    "            hog_features = []\n",
-    "            for channel in range(feature_image.shape[2]):\n",
-    "                hog_features.append(get_hog_features(feature_image[:,:,channel], \n",
-    "                                    orient, pix_per_cell, cell_per_block, \n",
-    "                                    vis=False, feature_vec=True))\n",
-    "            hog_features = np.ravel(hog_features)        \n",
-    "        else:\n",
-    "            hog_features = get_hog_features(feature_image[:,:,hog_channel], orient, \n",
-    "                        pix_per_cell, cell_per_block, vis=False, feature_vec=True)\n",
-    "        # Append the new feature vector to the features list\n",
-    "        features1.append(hog_features)\n",
+    "        if spatial_feat == True:\n",
+    "            spat_features = bin_spatial(feature_image, size=spatial_size)\n",
+    "            features1.append(spat_features)\n",
+    "        if hist_feat == True:\n",
+    "            hist_features = color_hist(feature_image, nbins=hist_bins, bins_range=bins_range)\n",
+    "            features1.append(hist_features)\n",
+    "        if hog_feat==True:\n",
+    "            # Call get_hog_features() with vis=False, feature_vec=True\n",
+    "            if hog_channel == 'ALL':\n",
+    "                hog_features = []\n",
+    "                for channel in range(feature_image.shape[2]):\n",
+    "                    hog_features.append(get_hog_features(feature_image[:,:,channel], \n",
+    "                                        orient, pix_per_cell, cell_per_block, \n",
+    "                                        vis=False, feature_vec=True))\n",
+    "                hog_features = np.ravel(hog_features)        \n",
+    "            else:\n",
+    "                hog_features = get_hog_features(feature_image[:,:,hog_channel], orient, \n",
+    "                            pix_per_cell, cell_per_block, vis=False, feature_vec=True)\n",
+    "            # Append the new feature vector to the features list\n",
+    "            features1.append(hog_features)\n",
     "        features.append(np.concatenate(features1))\n",
     "    # Return list of feature vectors\n",
     "    # for the timebeing, only hog features are being returned. \n",
@@ -308,10 +316,17 @@
    },
    "outputs": [],
    "source": [
-    "cars_features=extract_features(cars,cspace='YUV', orient=9, pix_per_cell=8, cell_per_block=2, \n",
-    "                               hog_channel='ALL')\n",
-    "notcars_features=extract_features(notcars,cspace='YUV',orient=9, pix_per_cell=8, cell_per_block=2,\n",
-    "                                  hog_channel='ALL')\n",
+    "#working with HOG features\n",
+    "orient = 9\n",
+    "pix_per_cell = 8\n",
+    "cell_per_block = 2\n",
+    "colorspace = 'YUV' # Can be RGB, HSV, LUV, HLS, YUV, YCrCb\n",
+    "hog_channel = 0 # Can be 0, 1, 2, or \"ALL\"\n",
+    "\n",
+    "cars_features=extract_features(cars,cspace=colorspace, orient=orient, pix_per_cell=pix_per_cell, cell_per_block=cell_per_block, \n",
+    "                               hog_channel=hog_channel)\n",
+    "notcars_features=extract_features(notcars,cspace=colorspace,orient=orient, pix_per_cell=pix_per_cell, cell_per_block=cell_per_block,\n",
+    "                                  hog_channel=hog_channel)\n",
     "print('Total number of features of cars are     : ' +str(np.array(cars_features).shape))\n",
     "print('Total number of features of non-cars are : ' +str(np.array(notcars_features).shape))"
    ]
@@ -357,12 +372,14 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "import time\n",
     "# Use a linear SVC\n",
-    "svc = LinearSVC()\n",
+    "svc = LinearSVC(loss='hinge')\n",
+    "t=time.time()\n",
     "# Check the training time for the SVC\n",
     "svc.fit(X_train, y_train)\n",
-    "\n"
+    "t2 = time.time()\n",
+    "print(round(t2-t, 2), 'Seconds to train SVC...')\n"
    ]
   },
   {
@@ -500,8 +517,8 @@
     "                    spatial_size=(32, 32), hist_bins=32, \n",
     "                    hist_range=(0, 256), orient=9, \n",
     "                    pix_per_cell=8, cell_per_block=2, \n",
-    "                    hog_channel=0, spatial_feat=False, \n",
-    "                    hist_feat=False, hog_feat=True):\n",
+    "                    hog_channel='ALL', spatial_feat=True, \n",
+    "                    hist_feat=True, hog_feat=True):\n",
     "\n",
     "    #1) Create an empty list to receive positive detection windows\n",
     "    on_windows = []\n",
@@ -556,7 +573,7 @@
     "    image=np.copy(image1)\n",
     "    #image = image.astype(np.float32)/255\n",
     "    windows = slide_window(image, x_start_stop=[None, None], y_start_stop=[400,700], \n",
-    "                    xy_window=(96, 96), xy_overlap=(0.85, 0.85))\n",
+    "                    xy_window=(128, 128), xy_overlap=(0.85, 0.85))\n",
     "\n",
     "\n",
     "    window_img = draw_boxes(image, windows, color=(0, 0, 255), thick=6)                    \n",
@@ -566,12 +583,12 @@
     "    orient = 9\n",
     "    pix_per_cell = 8\n",
     "    cell_per_block = 2\n",
-    "    hog_channel = 'ALL' # Can be 0, 1, 2, or \"ALL\"\n",
+    "    hog_channel = 0 # Can be 0, 1, 2, or \"ALL\"\n",
     "\n",
     "    hot_windows = search_windows(image1, windows, svc, X_scaler, color_space='YUV', \n",
     "                        spatial_size=(32,32), hist_bins=32, \n",
     "                        orient=orient, pix_per_cell=pix_per_cell, \n",
-    "                        cell_per_block=cell_per_block,hog_channel='ALL',spatial_feat=False, hist_feat=False,hog_feat=True)                       \n",
+    "                        cell_per_block=cell_per_block,hog_channel=0,spatial_feat=False, hist_feat=False,hog_feat=True)                       \n",
     "\n",
     "    window_img = draw_boxes(image, hot_windows, color=(0, 0, 255), thick=6)                    \n",
     "    plotmyimage(window_img)\n",
@@ -587,7 +604,15 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "def convert_color(img, conv='RGB2YCrCb'):\n",
+    "    if conv == 'RGB2YCrCb':\n",
+    "        return cv2.cvtColor(img, cv2.COLOR_RGB2YCrCb)\n",
+    "    if conv == 'BGR2YCrCb':\n",
+    "        return cv2.cvtColor(img, cv2.COLOR_BGR2YCrCb)\n",
+    "    if conv == 'RGB2LUV':\n",
+    "        return cv2.cvtColor(img, cv2.COLOR_RGB2LUV)\n",
+    "    if conv == 'RGB2YUV':\n",
+    "        return cv2.cvtColor(img, cv2.COLOR_RGB2YUV)\n",
     "# Define a single function that can extract features using hog sub-sampling and make predictions\n",
     "def find_cars(img, ystart, ystop, scale, svc, X_scaler, orient, pix_per_cell, cell_per_block, spatial_size, hist_bins):\n",
     "    \n",
@@ -595,8 +620,8 @@
     "    #img = img.astype(np.float32)/255\n",
     "    boxes=[]\n",
     "    img_tosearch = img[ystart:ystop,:,:]\n",
-    "    #ctrans_tosearch = convert_color(img_tosearch, conv='RGB2YCrCb')\n",
-    "    ctrans_tosearch = np.copy(img_tosearch)\n",
+    "    ctrans_tosearch = convert_color(img_tosearch, conv='RGB2YUV')\n",
+    "    #ctrans_tosearch = np.copy(img_tosearch)\n",
     "    if scale != 1:\n",
     "        imshape = ctrans_tosearch.shape\n",
     "        ctrans_tosearch = cv2.resize(ctrans_tosearch, (np.int(imshape[1]/scale), np.int(imshape[0]/scale)))\n",
@@ -630,8 +655,8 @@
     "            hog_feat1 = hog1[ypos:ypos+nblocks_per_window, xpos:xpos+nblocks_per_window].ravel() \n",
     "            hog_feat2 = hog2[ypos:ypos+nblocks_per_window, xpos:xpos+nblocks_per_window].ravel() \n",
     "            hog_feat3 = hog3[ypos:ypos+nblocks_per_window, xpos:xpos+nblocks_per_window].ravel() \n",
-    "            hog_features = np.hstack((hog_feat1, hog_feat2, hog_feat3))\n",
-    "\n",
+    "            #hog_features = np.hstack((hog_feat1, hog_feat2, hog_feat3))\n",
+    "            hog_features = np.hstack(hog_feat1)\n",
     "            xleft = xpos*pix_per_cell\n",
     "            ytop = ypos*pix_per_cell\n",
     "\n",
@@ -695,13 +720,7 @@
     "        cv2.rectangle(img, bbox[0], bbox[1], (0,0,255), 6)\n",
     "    # Return the image\n",
     "    return img\n",
-    "def convert_color(img, conv='RGB2YCrCb'):\n",
-    "    if conv == 'RGB2YCrCb':\n",
-    "        return cv2.cvtColor(img, cv2.COLOR_RGB2YCrCb)\n",
-    "    if conv == 'BGR2YCrCb':\n",
-    "        return cv2.cvtColor(img, cv2.COLOR_BGR2YCrCb)\n",
-    "    if conv == 'RGB2LUV':\n",
-    "        return cv2.cvtColor(img, cv2.COLOR_RGB2LUV)\n"
+    "\n"
    ]
   },
   {
@@ -721,7 +740,7 @@
     "image1=(mpimg.imread(file))\n",
     "image=np.copy(image1)\n",
     "\n",
-    "image = image.astype(np.float32)/255\n",
+    "#image = image.astype(np.float32)/255\n",
     "\n",
     "ystart = 400\n",
     "ystop = 656\n",
@@ -750,7 +769,7 @@
     "heat = np.zeros_like(image[:,:,0]).astype(np.float)\n",
     "#print(heat)\n",
     "heat = add_heat(heat, bbox_list)\n",
-    "heat = apply_threshold(heat, 1)  \n",
+    "heat = apply_threshold(heat, 3)  \n",
     "\n",
     "heatmap = np.clip(heat, 0, 255)\n",
     "# Find final boxes from heatmap using label function\n",
@@ -776,6 +795,17 @@
    "outputs": [],
    "source": [
     "plotmyimage(heatmap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plotmyimage(draw_img)"
    ]
   },
   {
