--- a/P5_test.ipynb
+++ b/P5_test.ipynb
@@ -742,9 +742,7 @@
     "\n",
     "#image = image.astype(np.float32)/255\n",
     "\n",
-    "ystart = 400\n",
-    "ystop = 656\n",
-    "scale = 1.0\n",
+    "\n",
     "\n",
     "bbox_list = []\n",
     "orient=10\n",
@@ -753,23 +751,71 @@
     "spatial_size=(32, 32)\n",
     "hist_bins=64\n",
     "\n",
-    "\n",
+    "ystart = 400\n",
+    "ystop = 656\n",
+    "scale = 1.0\n",
     "\n",
     "_,boxes=find_cars(image, ystart, ystop, scale, svc, X_scaler,\n",
     "                                orient=9, pix_per_cell=8, cell_per_block=2,\n",
     "                                spatial_size=(32,32), hist_bins=32)\n",
     "bbox_list.append(boxes)\n",
     "\n",
+    "ystart = 350\n",
+    "ystop = 706\n",
+    "scale = 2.0\n",
+    "\n",
+    "_,boxes=find_cars(image, ystart, ystop, scale, svc, X_scaler,\n",
+    "                                orient=9, pix_per_cell=8, cell_per_block=2,\n",
+    "                                spatial_size=(32,32), hist_bins=32)\n",
+    "bbox_list.append(boxes)\n",
+    "\n",
+    "ystart = 400\n",
+    "ystop = 656\n",
+    "scale = 1.5\n",
+    "\n",
+    "_,boxes=find_cars(image, ystart, ystop, scale, svc, X_scaler,\n",
+    "                                orient=9, pix_per_cell=8, cell_per_block=2,\n",
+    "                                spatial_size=(32,32), hist_bins=32)\n",
+    "bbox_list.append(boxes)\n",
+    "\n",
+    "ystart = 300\n",
+    "ystop = 656\n",
+    "scale = 2.0\n",
+    "\n",
+    "_,boxes=find_cars(image, ystart, ystop, scale, svc, X_scaler,\n",
+    "                                orient=9, pix_per_cell=8, cell_per_block=2,\n",
+    "                                spatial_size=(32,32), hist_bins=32)\n",
+    "bbox_list.append(boxes)\n",
+    "\n",
+    "ystart = 400\n",
+    "ystop = 720\n",
+    "scale = 2.5\n",
+    "\n",
+    "_,boxes=find_cars(image, ystart, ystop, scale, svc, X_scaler,\n",
+    "                                orient=9, pix_per_cell=8, cell_per_block=2,\n",
+    "                                spatial_size=(32,32), hist_bins=32)\n",
+    "bbox_list.append(boxes)\n",
     "\n",
     "bbox_list = [item for sublist in bbox_list for item in sublist] \n",
     "\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "\n",
     "\n",
     "heat = np.zeros_like(image[:,:,0]).astype(np.float)\n",
     "#print(heat)\n",
     "heat = add_heat(heat, bbox_list)\n",
-    "heat = apply_threshold(heat, 3)  \n",
+    "heat = apply_threshold(heat, 12)  \n",
     "\n",
     "heatmap = np.clip(heat, 0, 255)\n",
     "# Find final boxes from heatmap using label function\n",
@@ -783,18 +829,7 @@
     "plt.subplot(122)\n",
     "plt.imshow(heatmap, cmap='hot')\n",
     "plt.title('Heat Map')\n",
-    "fig.tight_layout()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "plotmyimage(heatmap)"
+    "fig.tight_layout()"
    ]
   },
   {
@@ -806,6 +841,17 @@
    "outputs": [],
    "source": [
     "plotmyimage(draw_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plotmyimage(heatmap)"
    ]
   },
   {
