--- a/P5_test.ipynb
+++ b/P5_test.ipynb
@@ -861,6 +861,96 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "def process_frame(image):\n",
+    "    \n",
+    "    bbox_list = []\n",
+    "    orient=10\n",
+    "    pix_per_cell=8\n",
+    "    cell_per_block=2\n",
+    "    spatial_size=(32, 32)\n",
+    "    hist_bins=64\n",
+    "\n",
+    "    ystart = 400\n",
+    "    ystop = 656\n",
+    "    scale = 1.0\n",
+    "\n",
+    "    _,boxes=find_cars(image, ystart, ystop, scale, svc, X_scaler,\n",
+    "                                    orient=9, pix_per_cell=8, cell_per_block=2,\n",
+    "                                    spatial_size=(32,32), hist_bins=32)\n",
+    "    bbox_list.append(boxes)\n",
+    "\n",
+    "    ystart = 350\n",
+    "    ystop = 706\n",
+    "    scale = 2.0\n",
+    "\n",
+    "    _,boxes=find_cars(image, ystart, ystop, scale, svc, X_scaler,\n",
+    "                                    orient=9, pix_per_cell=8, cell_per_block=2,\n",
+    "                                    spatial_size=(32,32), hist_bins=32)\n",
+    "    bbox_list.append(boxes)\n",
+    "\n",
+    "    ystart = 400\n",
+    "    ystop = 656\n",
+    "    scale = 1.5\n",
+    "\n",
+    "    _,boxes=find_cars(image, ystart, ystop, scale, svc, X_scaler,\n",
+    "                                    orient=9, pix_per_cell=8, cell_per_block=2,\n",
+    "                                    spatial_size=(32,32), hist_bins=32)\n",
+    "    bbox_list.append(boxes)\n",
+    "\n",
+    "    ystart = 300\n",
+    "    ystop = 656\n",
+    "    scale = 2.0\n",
+    "\n",
+    "    _,boxes=find_cars(image, ystart, ystop, scale, svc, X_scaler,\n",
+    "                                    orient=9, pix_per_cell=8, cell_per_block=2,\n",
+    "                                    spatial_size=(32,32), hist_bins=32)\n",
+    "    bbox_list.append(boxes)\n",
+    "\n",
+    "    ystart = 400\n",
+    "    ystop = 720\n",
+    "    scale = 2.5\n",
+    "\n",
+    "    _,boxes=find_cars(image, ystart, ystop, scale, svc, X_scaler,\n",
+    "                                    orient=9, pix_per_cell=8, cell_per_block=2,\n",
+    "                                    spatial_size=(32,32), hist_bins=32)\n",
+    "    bbox_list.append(boxes)\n",
+    "\n",
+    "    bbox_list = [item for sublist in bbox_list for item in sublist] \n",
+    "    heat = np.zeros_like(image[:,:,0]).astype(np.float)\n",
+    "    #print(heat)\n",
+    "    heat = add_heat(heat, bbox_list)\n",
+    "    heat = apply_threshold(heat, 12)  \n",
+    "\n",
+    "    heatmap = np.clip(heat, 0, 255)\n",
+    "    # Find final boxes from heatmap using label function\n",
+    "    labels = label(heatmap)\n",
+    "    draw_img = draw_labeled_bboxes(np.copy(image), labels)\n",
+    "    return draw_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from moviepy.editor import VideoFileClip\n",
+    "test_out_file = 'test_video_out.mp4'\n",
+    "clip_test = VideoFileClip('test_video.mp4')\n",
+    "clip_test_out = clip_test.fl_image(process_frame)\n",
+    "%time clip_test_out.write_videofile(test_out_file, audio=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
